1.01.00

	Support voor SQLite database. Inclusief IVP test.

	Eliminatie PostgreSQL afhankelijkheden.

	Stabiele sorteervolgorde voor Journaal.

	IVP gebruikt nu de bestanden uit de example directory.

	Database versie 1.0.10; migratie beschikbaar.

	WAARSCHUWING: Bij teruggaan naar 1.0.9 moet de database eerst
	fysiek worden verwijderd!

1.00.04

	Trace messages voor SET/GET SEQUENCE.

	Update EekBoek.spec[.in] met goede URLs en zo.

1.00.03	2006-10-06 15:05

	Fix bug met TAccounts tabel bij interactief commando import.

	Fix bug in --ident display.

1.00.02	2006-09-30 13:54

	Forceer UNICODE onder Windows, tenzij locale:unicode dit
	overruled.

	Fix een bug in de inputafhandeling waar regels die met
	whitespace geheel worden genegeerd.

	Fix bug in het opstarten van het (ongedocumenteerde) sql
	commando.

1.00.01	2006-09-28 15:43

	Fix een bug waardoor de TAccounts tabel niet werd aangemaakt
	in geval van --import. Over het algemeen onschadelijk, tenzij
	de mutaties.eb een opdracht bevat die TAccounts nodig heeft,
	zoals een jaareinde.

	Fix detectie van Windows.

1.00	2006-08-27 21:15

	Op de kop af 18 maanden nadat ik de eerste regels intoetste tot wat nu
	EekBoek geworden is is het zover: de stabiliteit, functionaliteit,
	degelijkheid, veelzijdigheid en gebruiksgemak zijn naar tevredenheid
	van de gebruikers (en van mij!).

	Hier is hij dan: Versie 1.00! 

	* http://www.eekboek.nl/dl/EekBoek-1.00-1.noarch.rpm
	* http://www.eekboek.nl/dl/EekBoek-1.00-1.src.rpm
	* http://www.eekboek.nl/dl/EekBoek-1.00.tar.gz
	* http://www.eekboek.nl/dl/EekBoek.ppd

	Alle kits zijn voorzien van een aparte digitale handtekening. De key
	ervan vind je op http://www.eekboek.nl/fedora/RPM-PGP-KEY-EekBoek.

	YUM liefhebbers kunnen een (experimentele) repository toevoegen door
	het installeren van
	http://www.eekboek.nl/fedora/EekBoek-yum-1.0-1.noarch.rpm.
	Zie voor meer informatie http://www.eekboek.nl/fedora/repodata .

	De aanbevolen manier van installeren is door middel van de RPM.